# lightgbm_sample

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
chapter2/: section2_1_boston_EDA.ipynb  section2_2_boston_LinearRegression.ipynb  section2_2_boston_LinearRegression_RM.ipynb  section2_3_boston_DecisionTreeRegressor.ipynb  section2_3_boston_DecisionTreeRegressor_RM_max_depth=1.ipynb  section2_3_boston_DecisionTreeRegressor_RM_max_depth=2.ipynb  section2_4_boston_LightGBM.ipynb  section2_4_boston_LightGBM_RM.ipynb
chapter3/: section3_1_income_EDA.ipynb  section3_2_income_LogisticRegression.ipynb  section3_3_income_LightGBM.ipynb  section3_4_income_LightGBM_valid.ipynb
chapter4/: section4_1_diamond_ EDA.ipynb  section4_1_diamond_EDA.ipynb  section4_2_diamond_ LinearRegression.ipynb  section4_2_diamond_LinearRegression.ipynb  section4_3_diamond_LightGBM.ipynb  section4_4_diamond_LightGBM_feature_engineering.ipynb  section4_5_diamond_LightGBM_optuna.ipynb
chapter5/: section5_1_simple_DecisionTreeRegressor.ipynb  section5_2_simple_GradientBoostingRegressor.ipynb  section5_3_simple_XGBoost.ipynb  section5_4_simple_LightGBM.ipynb  section5_5_exoplanets_LightGBM.ipynb
